--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "mabrouk/filterable",
-    "description": "a laravel package to filter model results the most convenient way",
+    "description": "a laravel package to filter model results is breeze",
     "type": "library",
     "license": "MIT",
     "authors": [
